src/scss/table-override.scss
$table: (
);

.pf-v6-c-table {
  /* Header styles */
  --pf-v6-c-table__thead--cell--FontWeight: var(--pf-v5-c-table__thead--cell--FontWeight, 700);
  --pf-v6-c-table__thead--cell--FontSize: var(--pf-v5-global--FontSize--sm, 14px);

  /* Body styles */
  --pf-v6-c-table__tbody--cell--PaddingBlockStart: var(--pf-v5-c-table__tbody--cell--PaddingTop, 24px);
  --pf-v6-c-table__tbody--cell--PaddingBlockEnd: var(--pf-v5-c-table__tbody--cell--PaddingBottom, 24px);
  --pf-v6-c-table__tbody--cell--FontSize: var(--pf-v5-global--FontSize--md, 16px);

  /* First and Last child styles styles */
  --pf-v6-c-table--cell--first-last-child--PaddingInline: var(--pf-v5-c-table--cell--PaddingLeft, 16px);

  /* Striped background color styles*/
  --pf-v6-c-table--m-striped__tr--BackgroundColor: #fafafa;

  /* Sort indicator color styles*/
  --pf-v6-c-table__sort-indicator--Color: #d2d2d2;

  /* Favorite selected state styles */
  --pf-v6-c-table__favorite--m-favorited--c-button--Color: var(--pf-v5-c-table__favorite--m-favorited--c-button--Color, #f0ab00)

  /* Compound Expansion icon color styles */
  --pf-v6-c-table__compound-expansion-toggle__button--Color: var(--pf-v5-c-table__compound-expansion-toggle__button--Color, #06c);
  --pf-v6-c-table__compound-expansion-toggle__button--hover--Color: var(--pf-v5-c-table__compound-expansion-toggle__button--hover--Color, #004080);

  // /* Clickable variant styles */
  // --pf-v6-c-table__tr--m-clickable--hover--BackgroundColor: #ffffff;
}

/* Nested selectors for table header that need specific overrides */
.pf-v6-c-table thead:where(.pf-v6-c-table__thead) {
  border-bottom: 1px solid #d2d2d2; //Causing double border where already border is present

  .pf-v6-c-table__favorite .pf-v6-c-button {
    --pf-v6-c-button--m-plain__icon--Color: #6a6e73;
  }
}

/* Nested selectors for table body that need specific overrides */
.pf-v6-c-table tbody:where(.pf-v6-c-table__tbody) {
  .pf-v6-c-table__favorite .pf-v6-c-button {
    --pf-v6-c-button--m-plain__icon--Color: #d2d2d2;
  }

  .pf-v6-c-table__expandable-row .pf-v6-c-table__expandable-row-content {
    padding-inline: 0px;
    padding-block: 24px;
  }
}

/* Selectors for compact table variants */
.pf-v6-c-table.pf-m-compact tr:where(.pf-v6-c-table__tr)>* {
  padding-inline-start: var(--rh-space-md, 8px);
  padding-inline-end: var(--rh-space-md, 8px);
}

.pf-v6-c-table__compound-expansion-toggle.pf-m-expanded {
  border-left: var(--rh-length-4xs, 1px) solid #d2d2d2;
  border-right: var(--rh-length-4xs, 1px) solid #d2d2d2;
  border-bottom: var(--rh-length-4xs, 1px) solid #ffffff;
}

/* Nested selectors for specific overrides */
.pf-v6-c-table:not(.pf-m-sticky-header)>.pf-m-nested-column-header tr:where(.pf-v6-c-table__tr):not(:last-child) th:where(.pf-v6-c-table__th):not([rowspan]),
.pf-v6-c-table:not(.pf-m-sticky-header)>.pf-m-nested-column-header tr:where(.pf-v6-c-table__tr):not(:last-child) td:where(.pf-v6-c-table__td):not([rowspan]) {
  --pf-v6-c-table--cell--PaddingBlockEnd: var(--rh-length-xs, 4px);
}

.pf-v6-c-table__expandable-row td:where(.pf-v6-c-table__td).pf-m-no-padding .pf-v6-c-table__expandable-row-content,
.pf-v6-c-table__expandable-row th:where(.pf-v6-c-table__th).pf-m-no-padding .pf-v6-c-table__expandable-row-content {
  padding: 0;
}

.pf-v6-c-table tr:where(.pf-v6-c-table__tr).pf-m-selected {
  background-color: #ffffff;
}

// /* Selectors for clickable table variants */
// .pf-v6-c-table tr:where(.pf-v6-c-table__tr).pf-m-clickable:is(:hover, :focus) {
//   box-shadow: 0 -0.1875rem 0.25rem -0.125rem rgba(3, 3, 3, 0.08),
//             0 0.1875rem 0.25rem -0.125rem rgba(3, 3, 3, 0.08);

//   .pf-v6-c-table tr:where(.pf-v6-c-table__tr) > :where(th, td):first-child {
//     background-color: #004080;
//   }
// }

